# eq_layer

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  eq.txt  eq2.txt  ne10db.txt
src/: config.rs  eq.rs  eq.rs.bac  executor.rs  macos.rs  main.rs  run.rs  settings.rs  utils.rs
src/cli/: mod.rs
src/ui/: command.rs  equalizer.rs  graph.rs  heading.rs  mod.rs
