[package]
name = "eq_layer"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.100"
biquad = "0.5.0"
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.16.0"
dirs = "6.0.0"
eframe = { version = "0.33.2", default-features = false, features = ["default_fonts", "glow"] }
egui_plot = "0.34.0"
env_logger = "0.11.8"
log = "0.4.28"
rfd = "0.16.0"
ringbuf = "0.4.8"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
