[package]
name = "eq_layer"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
biquad = "0.6"
clap = { version = "4.6", features = ["derive"] }
cpal = "0.17"
dirs = "6.0"
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_plot = "0.35"
font-kit = "0.14"
rfd = "0.17"
ringbuf = "0.5"
scc = "3.7"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
